--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Stunning System</title>
-
   </head>
   <body>
-    
+    <main>
+      <form action="">
+        <input type="text"> 
+        <button>Add list</button>
+        <ul id="ulAddList"></ul>
+      </form>
+    </main>
+    <script src="main.js"></script>
   </body>
 </html>
