Added delete functionality to the list and added style.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Stunning System</title>
+    <script type="text/javascript" src="main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <main>
@@ -12,6 +14,5 @@
         <ul id="ulAddList"></ul>
       </form>
     </main>
-    <script src="main.js"></script>
   </body>
 </html>
