--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>Trello</header>
     <main>
       <form action="">
-        <input type="text"> 
-        <button>Add list</button>
+        <input type="text" placeholder="Enter list title....."> 
+        <button id="btnAddList">Add list</button>
         <ul id="ulAddList"></ul>
       </form>
     </main>
+    <footer>© Copyright 2019, All Rights Reserved</footer>
   </body>
 </html>
