--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stunning System</title>
-
+    <script src="script.js" defer></script>
   </head>
   <body>
     
