Fixed addCard function and the ability to edit a list-title or item-text

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>Stunning System</title>
     <script type="text/javascript" src="main.js" defer></script>
+    <script type="text/javascript" src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>Trello</header>
     <main>
       <form action="">
-        <input type="text" placeholder="Enter list title.....">
+        <input class="addList-input" type="text" placeholder="Enter list title.....">
         <button id="btnAddList">Add list</button>
         <ul id="ulAddList"></ul>
       </form>
