Started with the design

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stunning System</title>
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <script type="text/javascript" src="main.js" defer></script>
     <script type="text/javascript" src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
@@ -11,11 +12,15 @@
     <header>Trello</header>
     <main>
       <form action="">
-        <input class="addList-input" type="text" placeholder="Enter list title.....">
-        <button id="btnAddList">Add list</button>
+      <div class="container">
+        <div class="addList-field">
+          <input class="addList-input" type="text" placeholder="Enter list title.....">
+          <button id="btnAddList">Add list</button>
+        </div>
+      </div>
         <ul id="ulAddList"></ul>
       </form>
     </main>
-    <footer>© Copyright 2019, All Rights Reserved</footer>
+    <!--<footer>© Copyright 2019, All Rights Reserved</footer>!-->
   </body>
 </html>
