Modified page title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>Trello</header>
+    <header>Yellow Trello</header>
     <main>
       <form action="">
       <div class="container">
